fixing menu icon on iphone

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
     position: fixed;
     margin-top: 0;
     display: block;
-    right: 92%;
+    left: 3%;
     top: 40px;
     line-height:0px;
 }
